<resources>
    <string name="app_name">Будильник</string>
    <string name="alarm_clock">Будильник</string>
    <string name="create_title">Добавить</string>
    <string name="done">Сохранить</string>
    <string name="days_of_the_week">Дни недели</string>
    <string name="without_replay">Без повтора</string>
    <string name="sound">Звук</string>
    <string name="default_text">По умолчанию</string>
    <string name="vibration_signal">Вибросигнал</string>
    <string name="description">Описание</string>
    <string name="alarm_clock_off">Будильник выключен</string>
    <string name="alarm_clock_on">Будильник включен</string>
    <string name="disable_alarm">Отключить будильник</string>
    <string name="cancel">Отмена</string>
    <string name="defauly_ringtone">По умолчанию</string>
    <string name="no_alarms">Без Будильников</string>
    <string name="everyday">Ежедневно</string>
    <string name="swipe_to_off">Потяните вправо</string>
    <string name="setPhoto">Добавить фото</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
</resources>
