<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TimePicker
        android:id="@+id/timePicker"
        style="@style/TimePicker" />

    <LinearLayout
        style="@style/LayoutInfo">

        <View
            style="@style/Line" />

        <FrameLayout
            android:id="@+id/days_of_week"
            style="@style/InfoItem" >

            <TextView
                style="@style/TextLeft"
                android:text="@string/days_of_the_week" />

            <TextView
                android:id="@+id/days"
                style="@style/TextRight"
                android:text="@string/without_replay" />

        </FrameLayout>

        <View
            style="@style/Line" />

        <FrameLayout
            android:id="@+id/sound_layout"
            style="@style/InfoItem">

            <TextView
                style="@style/TextLeft"
                android:text="@string/sound" />

            <TextView
                android:id="@+id/sound"
                style="@style/TextRight"
                android:text="@string/default_text"
                android:maxLength="12"
                android:drawableRight="@drawable/ic_arrow_right_black"/>

        </FrameLayout>

        <View
            style="@style/Line" />

        <FrameLayout
            android:id="@+id/vibration_layout"
            style="@style/InfoItem">

            <TextView
                style="@style/TextLeft"
                android:text="@string/vibration_signal" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/vibration"
                style="@style/SwitchButtonInfo" />

        </FrameLayout>

        <View
            style="@style/Line" />

        <FrameLayout
            android:id="@+id/description_layout"
            style="@style/InfoItem">

            <TextView
                style="@style/TextLeft"
                android:text="@string/description" />

            <TextView
                android:id="@+id/description"
                style="@style/TextRight"
                android:text="@string/alarm_clock"
                android:drawableRight="@drawable/ic_arrow_right_black"/>

        </FrameLayout>

        <View
            style="@style/Line" />

    </LinearLayout>

</LinearLayout>
